--- a/.github/workflows/sudo-python-tests.yml
+++ b/.github/workflows/sudo-python-tests.yml
@@ -25,7 +25,7 @@ on:
 jobs:
   sudo-python-tests:
     if: github.repository_owner == 'magma' || github.event_name == 'workflow_dispatch'
-    runs-on: self-hosted
+    runs-on: macos-12
     steps:
       - uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8 # pin@v3.1.0
       - name: Cache magma-dev-box
@@ -58,7 +58,7 @@ jobs:
       - name: Provision the magma-dev VM
         run: |
           cd lte/gateway
-          export MAGMA_DEV_CPUS=3
+          export MAGMA_DEV_CPUS=2
           export MAGMA_DEV_MEMORY_MB=9216
           fab provision-magma-dev-vm
       - name: Run the sudo python tests
