--- a/.github/workflows/cwf-integ-test.yml
+++ b/.github/workflows/cwf-integ-test.yml
@@ -24,7 +24,7 @@ on:
 
 jobs:
   docker-build:
-    if: github.repository_owner == 'magma' || github.event_name == 'workflow_dispatch'
+    if: github.repository_owner == 'tapaswl' || github.event_name == 'workflow_dispatch'
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8 # pin@v3.1.0
@@ -65,7 +65,7 @@ jobs:
         with:
           args: 'CWF integration test: docker build step failed in run <https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}|${{github.run_id}}> from commit ${{ github.sha }}: ${{ github.event.head_commit.message || github.event.pull_request.title }}'
   cwf-integ-test:
-    if: github.repository_owner == 'magma' || github.event_name == 'workflow_dispatch'
+    if: github.repository_owner == 'tapaswl' || github.event_name == 'workflow_dispatch'
     runs-on: macos-12
     needs: docker-build
     steps:
